--- a/docs/docs/api/template-engine/evaluation.mdx
+++ b/docs/docs/api/template-engine/evaluation.mdx
@@ -56,6 +56,14 @@ import TabItem from '@theme/TabItem';
 
 <TabItem value="inline" label="Inline">
 
+:::caution
+
+Inline evaluations are not recommend due to the white space they leave behind.
+However we still support this syntax due to legacy reasons but may be removed in
+future versions.
+
+:::
+
 <Dot>
 
 ```text
@@ -92,6 +100,14 @@ import TabItem from '@theme/TabItem';
 </TabItem>
 
 <TabItem value="inline" label="Inline">
+
+:::caution
+
+Inline evaluations are not recommend due to the white space they leave behind.
+However we still support this syntax due to legacy reasons but may be removed in
+future versions.
+
+:::
 
 <Dot>
 
