delete references to dot

--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -126,14 +126,9 @@ You can learn more about the settings file in our
 
 ## Dynamic files
 
-Within each package, you can use dynamic files. Dynamic files are files that end
-with a `.dot` extension. These files enable you to leverage all the features
-provided by [doT](http://olado.github.io/doT/index.html) within tps.
-
-Dynamic files provide the capability to pass data and enhance the power of
-dynamic rendering. By utilizing this data, you can leverage the features of doT
-to conditionally render specific sections of code or perform other dynamic
-operations. This allows for more flexibility and customization in your
+Within each package, you can use dynamic files, which are files ending with a
+.tps extension. Dynamic files allow you to utilize our template engine to create
+dynamic content. This results in more flexibility and customization in your
 templates.
 
 ## Making a new template
@@ -345,7 +340,8 @@ topic right now but here are some basics.
 
 :::tip
 
-Not sure what templates you have? Check out our [list command](../../api/cli#list)
+Not sure what templates you have? Check out our
+[list command](../../api/cli#list)
 
 :::
 
