--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -1533,9 +1533,9 @@ Dont remember what the template name is? Refresh your mind
 ```
 
 `tps.answers` is an object that holds the responses your user provided for your
-prompts. [Prompts](./promtpts) are a way for template owners to ask users for
+prompts. [Prompts](./prompts) are a way for template owners to ask users for
 additional information about how they want their template created. However
-[prompts](./promtpts) aren't covered until a bit later in this guide.
+[prompts](./prompts) aren't covered until a bit later in this guide.
 
 <Example>
 
