Docs: update template and react component docs

--- a/docs/docs/main/create-new-template/templates.mdx
+++ b/docs/docs/main/create-new-template/templates.mdx
@@ -127,9 +127,9 @@ You can learn more about the settings file in our
 ## Dynamic files
 
 Within each package, you can use dynamic files, which are files ending with a
-.tps extension. Dynamic files allow you to utilize our template engine to create
-dynamic content. This results in more flexibility and customization in your
-templates.
+`.tps` extension. Dynamic files allow you to utilize our template engine to
+create dynamic content. This results in more flexibility and customization in
+your templates.
 
 ## Making a new template
 
