React component: Add gif to docs home page

--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -3,8 +3,28 @@ import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import { Button } from '@site/docs/components/button';
+import ReactComponentGif2 from './react-component.gif';
 
 # react-component
+
+<div className="row" style={{ fontSize: 20 }}>
+	<div className="col col--6">🎉 Supports Typescript</div>
+	<div className="col col--6">📗 Supports Storybook</div>
+	<div className="col col--6">🧪 Supports Unit tests</div>
+	<div className="col col--6">💅 Supports multiple CSS languages</div>
+</div>
+
+<br />
+
+Generate a fully functioning React function component.
+
+<img
+	className="shadow--lw"
+	src={ReactComponentGif2}
+	style={{ width: '100%', borderRadius: '5px' }}
+/>
+
+## Usage
 
 :::info Now accepting new feature requests
 
@@ -31,19 +51,6 @@ using the form below. We hope to hear from you soon!
 </Button>
 
 :::
-
-<div className="row" style={{ fontSize: 20 }}>
-	<div className="col col--6">🎉 Supports Typescript</div>
-	<div className="col col--6">📗 Supports Storybook</div>
-	<div className="col col--6">🧪 Supports Unit tests</div>
-	<div className="col col--6">💅 Supports multiple CSS languages</div>
-</div>
-
-<br />
-
-Generate a fully functioning React function component.
-
-## Usage
 
 ```bash title="Usage"
 tps react-component <component-name>
