--- a/docs/docs/main/templates/react-component.mdx
+++ b/docs/docs/main/templates/react-component.mdx
@@ -22,6 +22,7 @@ Generate a fully functioning React function component.
 	className="shadow--lw"
 	src={ReactComponentGif2}
 	style={{ width: '100%', borderRadius: '5px' }}
+	alt="react component template usage gif"
 />
 
 ## Usage
