Docs: Update welcome page

--- a/docs/docs/main/intro.mdx
+++ b/docs/docs/main/intro.mdx
@@ -11,38 +11,16 @@ import styles from './intro.module.css';
 
 # Welcome to Templates
 
-:::info
+Templates is a framework for creating reusable file structures and code, saving
+you time and energy from starting from scratch. Our dynamic features allow
+templates to prompt users for information, render dynamic values, conditionally
+rendering code and the files system, and more. Whether you want to build a
+template for a full-stack web application, a React or Angular component, or
+something custom for your codebase, Templates can handle it all!
 
-Templates is commonly referred as `tps`. Any mentions to `tps` is referring to
-the whole library and not individual templates you can create. Dont worry we
-will go over this later
-
-:::
-
-Hey there! As a developer, you know that writing code can sometimes get
-repetitive. Well, here's a fantastic solution for you: Templates!
-
-Templates are like handy collections of files and code that you can use over and
-over again. Imagine having a set of blueprints for specific pieces of code, like
-entire React component, API controllers, or any other parts of your project.
-Instead of just small code snippets, templates encompass entire file structures,
-allowing you to include not just code, but also folders, configuration files,
-and more!
-
-When you create a template, it becomes your go-to tool for speeding up your
-workflow. Rather than manually piecing together code snippets, templates
-generate entire sections of your project instantly. This is especially useful
-for larger pieces of code or complete project architectures.
-
-The beauty of templates lies in their dynamic nature. You have the freedom to
-include logic, conditional statements, and dynamic values within your code. This
-means your templates can adapt and change based on the context or user input,
-making them incredibly flexible and powerful.
-
-So, whether you're building a web app, mobile project, or anything else,
-templates are your dynamic coding superheroes! They save you time, ensure
-consistency, and help you avoid repetitive tasks. Give it a try and witness how
-templates take your coding game to the next level!"
+Learn how to create your own template or explore our collection of pre-made
+templates, like our popular [react-component](./templates/react-component.mdx)
+template.
 
 ## Installation
 
@@ -51,6 +29,13 @@ npm install -g templates-mo
 ```
 
 ## Getting started
+
+:::info
+
+Templates is commonly referred as `tps`. Any mentions to `tps` is referring to
+the whole library and not individual templates you can create.
+
+:::
 
 <div className={styles.templateOptions}>
   <div className={styles.templateOption}>
@@ -86,16 +71,14 @@ Explore our library of existing templates!
 
 ## Coming from Create-components-react?
 
-Hello, wonderful friends! Your support for my packages is truly appreciated. To
-enhance your development experience, we have thoughtfully crafted a
-`react-component` template that comes right out of the box for an easy
-transition! Exciting, right?
+Welcome friends! Your support for my packages is truly appreciated. To make
+migration eaiser, we have developed a
+[`react-component`](./templates/react-component) template that is available
+right out of the box.
 
 To get started, head over to the
-[`react-component`](./templates/react-component) template documentation. There,
-you'll find all the valuable information you need to make the most of this
-template. Ready to make a new template? Check out our
-[create a new template docs](./create-new-template/)
+[`react-component`](./templates/react-component) documentation, where you'll
+find all the valuable information you need to make the most of this template.
 
 ### Migrate your react component template
 
