small word change on welcome

--- a/docs/docs/main/intro.mdx
+++ b/docs/docs/main/intro.mdx
@@ -42,8 +42,7 @@ the whole library and not individual templates you can create.
 
 ## Create a new template
 
-Unlock the power of customization by learning how to create your very own custom
-templates!
+Learn how to create your first template.
 
 <div>
 	{/* eslint-disable react/self-closing-comp */}
@@ -57,7 +56,7 @@ templates!
 
 ## Search for exisiting templates
 
-Explore our library of existing templates!
+Explore our library of existing templates.
 
 <div>
 	<Link className={styles.btn} to="./templates/">
