--- a/docs/docs/main/create-new-template/prompts.mdx
+++ b/docs/docs/main/create-new-template/prompts.mdx
@@ -538,6 +538,303 @@ app.use(helmet());
 
 ---
 
+### Aliases
+
+The `aliases` option allows you to give aliases to your prompts. These aliases
+can be used when answer prompts either through the command line, node, or a
+[configuration file](../tpsrc.mdx) which we will cover more in detail in
+[how to answer prompts](#how-to-answer-prompts).
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			"name": "some-name",
+			/* ... */
+			// highlight-next-line
+			"aliases": ["<alias-name>"]
+		}
+	]
+}
+```
+
+:::tip
+
+On the command line, single letter aliases should be answered with a single dash
+`-` and other names should be answered with two dashes `--`
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			"name": "name",
+			"type": "input",
+			/* ... */
+			// highlight-next-line
+			"aliases": ["n", "realName"]
+		}
+	]
+}
+```
+
+Now I can answer this prompt with one of the following
+
+```bash
+tps some-template test --name lino
+
+# or
+
+tps some-template test -n lino
+
+# or
+
+tps some-template test --realName lino
+```
+
+:::
+
+<Example>
+
+If we were rendering a new instance using the `express-app` template and had
+this settings file
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			"name": "framework",
+			"choices": ["react", "vue", "angular"],
+			/* ... */
+			"aliases": ["f"]
+		}
+	]
+}
+```
+
+Now we can answer the prompt question with the alias
+
+<Tabs>
+<TabItem value="command-line" label="Command line">
+
+```bash
+tps express-app app -f react
+```
+
+</TabItem>
+
+<TabItem value="node" label="Node">
+
+```js
+const Templates = require('tps');
+
+const tps = new Templates('express-app');
+
+tps.setAnswers({ f: 'react' });
+```
+
+</TabItem>
+</Tabs>
+
+</Example>
+
+---
+
+### Hidden
+
+<span className="badge badge--secondary margin-left--xs margin-bottom--lg">
+	templates@>v1.1.1
+</span>
+
+The `hidden` option makes the prompt a hidden prompt. Hidden prompts do not get
+prompted by default. This is useful when you want to add more customizable logic
+in your template but dont want to overwhelm users with a tons of prompt
+questions.
+
+```json
+{
+	"prompts": [
+		{
+			// highlight-next-line
+			"hidden": true
+			// ...
+		}
+	]
+}
+```
+
+<Example>
+
+Lets say we had a template named `hidden-prompt-test` that had these two
+prompts, one being a hidden prompt and the not.
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			"name": "prompt1",
+			"message": "Would you like to include prompt1",
+			"tpsType": "data",
+			"type": "confirm"
+		},
+		{
+			"name": "prompt2",
+			"message": "Would you like to include prompt2",
+			"tpsType": "data",
+			"type": "confirm",
+			// highlight-next-line
+			"hidden": true
+		}
+	]
+}
+```
+
+when users generate a new instance by default, hidden prompts wont be prompted
+so only `prompt1` will be prompted to the user.
+
+```bash
+tps hidden-prompt-test test
+? Would you like to include prompt1 (n/Y)
+```
+
+</Example>
+
+Hidden prompts can still be answered and prompted.
+
+#### Prompting all hidden prompts
+
+Use can use the [hidden option](../../api/template.mdx#hidden) to prompt all
+hidden prompts.
+
+<Tabs>
+<TabItem value="cli" label="CLI">
+
+```bash
+tps hidden-prompt-test test --hidden
+```
+
+</TabItem>
+
+<TabItem value="tpsrc" label=".tpsrc">
+
+```json title=".tpsrc"
+{
+	"hidden-prompt-test": {
+		"opts": {
+			// highlight-next-line
+			"hidden": true
+		}
+	}
+}
+```
+
+</TabItem>
+
+</Tabs>
+
+<Example>
+
+Lets say we had a template named `hidden-prompt-test` that had these two
+prompts, one being a hidden prompt and the not.
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			"name": "prompt1",
+			"message": "Would you like to include prompt1",
+			"tpsType": "data",
+			"type": "confirm"
+		},
+		{
+			"name": "prompt2",
+			"message": "Would you like to include prompt2",
+			"tpsType": "data",
+			"type": "confirm",
+			// highlight-next-line
+			"hidden": true
+		}
+	]
+}
+```
+
+If we wanted to get prompted hidden prompts, we can use the hidden option and
+all hidden prompts will now be prompted to you
+
+```bash
+tps hidden-prompt-test test --hidden
+? Would you like to include prompt1 (n/Y)
+? Would you like to include prompt2 (n/Y)
+```
+
+</Example>
+
+#### Answering hidden prompts
+
+You can also answer hidden prompt just like any normal prompt which we will
+cover in the [next section](#how-to-answer-prompts)
+
+<Tabs>
+<TabItem value="cli" label="CLI">
+
+```bash
+tps hidden-prompt-test test --hiddenPrompt
+```
+
+</TabItem>
+
+<TabItem value="tpsrc" label=".tpsrc">
+
+```json title=".tpsrc"
+{
+	"hidden-prompt-test": {
+		"opts": {
+			// highlight-next-line
+			"hiddenPrompt": true
+		}
+	}
+}
+```
+
+</TabItem>
+
+</Tabs>
+
+<Example>
+
+Lets say we had a template named `hidden-prompt-test` that had these two
+prompts, one being a hidden prompt and the not.
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			"name": "prompt1",
+			"message": "Would you like to include prompt1",
+			"tpsType": "data",
+			"type": "confirm"
+		},
+		{
+			"name": "prompt2",
+			"message": "Would you like to include prompt2",
+			"tpsType": "data",
+			"type": "confirm",
+			// highlight-next-line
+			"hidden": true
+		}
+	]
+}
+```
+
+If we wanted to answer `prompt2` without being prompted we can pass in the
+`prompt2` flag.
+
+```bash
+tps hidden-prompt-test test --prompt2
+? Would you like to include prompt1 (n/Y)
+```
+
+</Example>
+
 ## How to answer prompts
 
 ### Interactive
@@ -756,6 +1053,62 @@ tps express-app app --extras metrics api unit --some-other-flag
 
 :::
 
+### Configuration File
+
+Templates also supports answering prompts in our
+[configuration file](../tpsrc.mdx) aka (tpsrc file). When adding an answer to
+your config file, templates will use this answer when generating a new instance
+and will no longer be prompt you the prompted you answered.
+
+You can read more about how to use our configuration file in our
+[configuration guide](../tpsrc.mdx)
+
+```json title=".tpsrc"
+{
+	"<template-name>": {
+		// highlight-start
+		"answers": {
+			"<prompt-name>": "<prompt-answer>"
+		}
+		// highlight-end
+	}
+}
+```
+
+<Example>
+
+If I had a template named `hello-world` and a prompt named `age`:
+
+```json title="settings.json"
+{
+	"prompts": [
+		{
+			// highlight-next-line
+			"name": "age"
+			// ...
+		}
+	]
+}
+```
+
+Then I can set the answer to the prompt in our `.tpsrc` file with:
+
+```json title=".tpsrc"
+{
+	"hello-world": {
+		"answers": {
+			// highlight-next-line
+			"age": 23
+		}
+	}
+}
+```
+
+Now you will no longer be prompted the `age` prompt and templates will use the
+answer 23 for ever instance you render.
+
+</Example>
+
 ### node
 
 To answer prompts in javascript using the module. Use the `setAnswers` function.
@@ -781,151 +1134,7 @@ const age = 23;
 tps.setAnswers({ age });
 ```
 
-### Aliases
+## Examples
 
-Aliases are commonly used for command line flags, providing convenient shortcuts
-for better interaction. To enhance usability, tps enables you to assign aliases
-to your prompts. These aliases can be utilized to answer prompts either through
-the command line or via the node module, offering flexible options for prompt
-handling.
-
-```json title="settings.json"
-{
-	"prompts": [
-		{
-			"name": "framework",
-			/* ... */
-			"aliases": ["<alias-name>"]
-		}
-	]
-}
-```
-
-<Example>
-
-If we were rendering a new instance using the `express-app` template and had
-this settings file
-
-```json title="settings.json"
-{
-	"prompts": [
-		{
-			"name": "framework",
-			"choices": ["react", "vue", "angular"],
-			/* ... */
-			"aliases": ["f"]
-		}
-	]
-}
-```
-
-Now we can answer the prompt question via the alias
-
-<Tabs>
-<TabItem value="command-line" label="Command line">
-
-```bash
-tps express-app app -f react
-```
-
-</TabItem>
-
-<TabItem value="node" label="Node">
-
-```js
-const Templates = require('tps');
-
-const tps = new Templates('express-app');
-
-tps.setAnswers({ f: 'react' });
-```
-
-</TabItem>
-</Tabs>
-
-</Example>
-
----
-
-## Inquirer
-
-Like mentioned before, Tps uses inquirer for prompting. This mean we can use any
-of inquirer properties also. Here are some examples:
-
-### booleans Example
-
-Say you have this react component template:
-
-```text
-| - tps-example
-	| - .tps/
-		| - react-component/
-			| - settings.json
-			| - default/
-				| - index.js
-			| - css
-				| - {{=tps.name}}.css
-```
-
-Adding this prompt will allow you to conditionally render the css package
-
-```json title="settings.json"
-{
-	"prompts": [
-		{
-			"name": "css",
-			"type": "confirm",
-			"message": "Would you like to add a css file?"
-		}
-	]
-}
-```
-
-Now if the user answers true like so:
-
-```bash
-tps react-component App --css
-```
-
-then this will be the new template:
-
-```text
-    | - tps-example
-        | - .tps/
-            | - ...
-        | - App
-           | - index.js
-           | - App.css
-```
-
-Now if the user answers false like so:
-
-```bash
-tps react-component App --no-css
-```
-
-then this will be the new template:
-
-```text
-    | - tps-example
-        | - .tps/
-            | - ...
-        | - App
-           | - index.js
-```
-
-### Lists Examples
-
-```json title="settings.json"
-{
-	"prompts": [
-		{
-			"name": "modules",
-			"type": "checkbox",
-			"choices": ["react", "express", "fs", "path"],
-			"tpsType": "data",
-			"message": "What node modules would you like to import into this js file?"
-		}
-	]
-}
-```
+View can view more detailed examples in our
+[prompt api docs](../../api/settings/prompt.mdx)
